<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.neighbour_list.NeighbourProfile">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <!-- Profile image with name and return button -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:scaleType="centerCrop"
        android:src="@drawable/caroline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/name_on_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Caroline"
        android:textColor="#E6F7FF"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintStart_toStartOf="@+id/profile_picture" />

    <!-- First block with name, coordinates, phone number and web -->
    <android.support.v7.widget.CardView
        android:id="@+id/contacts"
        android:layout_width="392dp"
        android:layout_height="190dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/name_in_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Caroline"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="#FAF4F4"
            android:outlineSpotShadowColor="@color/grey"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="529dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="58dp"
            android:src="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:text="Saint-Pierre-du-Mont ; 5km"
            android:textColor="#A5A2A2"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="108dp"
            android:src="@drawable/ic_call_black_24dp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="110dp"
            android:text="+33 6 86 57 90 14"
            android:textColor="#A5A2A2"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="158dp"
            android:src="@drawable/ic_language_black_24dp" />

        <TextView
            android:id="@+id/webAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="160dp"
            android:text="www.facebook.fr/caroline"
            android:textColor="#A5A2A2"
            android:textSize="15sp" />
    </android.support.v7.widget.CardView>


    <!-- Second block with the about me text -->
    <android.support.v7.widget.CardView
        android:id="@+id/aboutMe"
        android:layout_width="391dp"
        android:layout_height="157dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/aProposDeMoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="A propos de moi"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:outlineSpotShadowColor="@color/grey"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="529dp"
            android:layout_marginTop="50dp"
            android:background="#FAF4F4"/>

        <TextView
            android:id="@+id/aboutMeText"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
            android:textColor="#A5A2A2" />
    </android.support.v7.widget.CardView>


    <!-- Favorite button star -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="58dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_star_border_yellow_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="337dp"
        tools:layout_editor_absoluteY="289dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>